--- a/jQueryCRUD-Table.html
+++ b/jQueryCRUD-Table.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Tugas CRUD JQUERY</title>
+	<title>Tugas CRUD JQUERY Mantul</title>
 	<!-- BOOTSTRAP -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
